Fix container box sizing to remove desktop horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 /* ========================================
